hphp/test/slow/pipe_expr/bad-pipevar-1.php.expectf

Fatal error: Cannot take indirect reference to a pipe variable in %s/bad-pipevar-1.php on line 4
